﻿wersja 9.6.7 - 2021-10-25
- dodano nagłówki Content-Type do rozpoznawania typ plików EPG.

wersja 9.6.6 - 2021-10-25
- dodano ustawienie rejestrowania z wyprzedzeniem w bazie danych (WAL)
- ulepszone parsowanie kanałów
- poprawiona wydajność
- naprawiono przekierowanie strumienia playlisty odtwarzania

wersja 9.6.5 - 2021-10-19
- dodano moduł urllib3.
- przebudowany menu przy wybóru EPG i przerobione kategorie grup
- poprawiona wydajność

wersja 9.6.4 - 2021-10-10
- poprawki

wersja 9.6.3 - 2021-10-08
- ulepszone rozpoznawanie prefiksów kraji dla kategorii grup
- dodano okno dialogowe z informacją o maksymalnej liczbie urządzeń dla serwisu Polsat GO
- usunięte błędy

wersja 9.6.2 - 2021-10-03
- dodano rozpoznawanie strumienia z kanałów EPG
- dodano opcje zmiany interwału aktualizacji EPG
- poprawka serwisu Telewizja Polska
- poprawka logowania do serwisu PlayerPL, Polsat GO, Polsat GO Box
- usunięte błędy

wersja 9.6.1 - 2021-09-17
- poprawka przewodnika konfiguracji
- poprawka logowania do Polsat GO na Kodi v18.9

wersja 9.6.0 - 2021-09-15
- poprawka dla serwisu PlayerPL
- poprawka odtwarzania w serwisie Nc+ GO
- naprawiono problemy z kodowaniem Python 2.7

wersja 9.5.9 - 2021-09-15
- naprawiono błąd utkniecia w pętli przy aktualizacji skórek
- poprawka logowania do serwisu Polsat GO
- poprawka prośby o odnowienie logowania do PlayerPL

wersja 9.5.8 - 2021-09-13
- zmiany w opcjach serwisach tv oraz playlist
- naprawiono błąd utkniecia w pętli przy aktualizacji skórek

wersja 9.5.7 - 2021-09-12
- naprawiono problemy z kodowaniem Python 2.7

wersja 9.5.6 - 2021-09-11
- ulepszone rozpoznawanie kanałów

wersja 9.5.5 - 2021-09-10
- naprawiono problemy z kodowaniem Python 2.7
- naprawiono przyciski sterujące

wersja 9.5.4 - 2021-09-08
- naprawiono logowanie Polsat GO Box
- ulepszone gesty dotykowe

wersja 9.5.3 - 2021-09-06
- dodany serwis Polsat GO Box
- dodano gesty dotykowe
- naprawiono usuwanie kontrolek, które powodowały awarię Kodi

wersja 9.5.2 - 2021-09-04